--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -4,6 +4,7 @@
       "Default": "Warning"
     }
   },
+  "AuthCert": "70e95355891398b16e8659bd51d52dc4cbef9130",
   "AllowedHosts": "*",
   "B2C": {
     "Instance": "https://login.microsoftonline.com/",
