--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -4,7 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AuthCert": "70e95355891398b16e8659bd51d52dc4cbef9130",
+  "AuthCert": {
+    "thumbprint": "70e95355891398b16e8659bd51d52dc4cbef9130",
+    "issuer": "CN=b2crestapi",
+    "subject": "CN=b2crestapi"
+  },
   "AllowedHosts": "*",
   "B2C": {
     "Instance": "https://login.microsoftonline.com/",
