--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -14,12 +14,17 @@
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "cf6c572c-c72e-4f31-bd0b-75623d040495",
     "ClientId": "f7ac5d3c-4b35-4452-9fac-fb0a82a543ae",
-    "ClientSecret": "70E95355891398B16E8659BD51D52DC4CBEF9130"
+    "ClientSecret": "70E95355891398B16E8659BD51D52DC4CBEF9130",
+    "Policy": "b2c_1a_basicsusi1"
   },
-  "MultiTenant": {
+  "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "b2cmultitenant.onmicrosoft.com",
     "ClientId": "08e86a26-1465-4eca-833a-48a08e7f1018",
     "ClientSecret": "70E95355891398B16E8659BD51D52DC4CBEF9130"
+  },
+  "RESTApi": {
+    "MetadataAddress": "",
+    "Audience": ""
   }
 }
