Display members working (with IAccount hack)

--- a/Apps/B2CMultiTenant/B2CMultiTenant/B2CMultiTenant.csproj
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/B2CMultiTenant.csproj
@@ -6,6 +6,10 @@
     <UserSecretsId>a838d338-0377-495c-bada-eb1d449fb594</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
