--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -11,11 +11,10 @@
   },
   "AllowedHosts": "*",
   "B2C": {
-    "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "cf6c572c-c72e-4f31-bd0b-75623d040495",
-    "ClientId": "f7ac5d3c-4b35-4452-9fac-fb0a82a543ae",
-    "ClientSecret": "70E95355891398B16E8659BD51D52DC4CBEF9130",
-    "Policy": "b2c_1a_basicsusi1"
+    "Instance": "https://b2cmultitenant.b2clogin.com",
+    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "ClientId": "62e7e7ea-a2cb-42e2-b356-f53424c67c4e",
+    "Policy": "b2c_1a_mtsusi"
   },
   "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
