Invitation working for local accts.

--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -9,5 +9,15 @@
     "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
     "Domain": "b2cmultitenant.onmicrosoft.com"
   },
+  "Invitation": {
+    "Domain": "b2cmultitenant.onmicrosoft.com",
+    "ClientId": "4359b489-7110-4d91-8946-0cf12b1cf90d",
+    "InvitationPolicy": "B2C_1A_MTInvitation",
+    "Issuer": "b2cmultitenant",
+    "Audience": "b2cmultitenant",
+    "ValidityHours": 72,
+    "RedirectUri": "https://jwt.ms",
+    "AppId": "4359b489-7110-4d91-8946-0cf12b1cf90d"
+  },
   "AllowedHosts": "*"
 }
