--- a/Apps/B2CMultiTenant/B2CMultiTenant/B2CMultiTenant.csproj
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/B2CMultiTenant.csproj
@@ -21,4 +21,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Content Update="Views\Members\Invite.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
