--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -11,13 +11,12 @@
   },
   "Invitation": {
     "Domain": "b2cmultitenant.onmicrosoft.com",
-    "ClientId": "4359b489-7110-4d91-8946-0cf12b1cf90d",
+    "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
     "InvitationPolicy": "B2C_1A_MTInvitation",
     "Issuer": "b2cmultitenant",
     "Audience": "b2cmultitenant",
     "ValidityHours": 72,
-    "RedirectUri": "https://jwt.ms",
-    "AppId": "4359b489-7110-4d91-8946-0cf12b1cf90d"
+    "RedirectUri": "https://localhost:44390"
   },
   "AllowedHosts": "*"
 }
