--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -16,7 +16,7 @@
     "Issuer": "b2cmultitenant",
     "Audience": "b2cmultitenant",
     "ValidityHours": 72,
-    "RedirectUri": "https://localhost:44390"
+    "RedirectPath": "/home/membersignin"
   },
   "AllowedHosts": "*"
 }
