Invitation and paramtric login working

--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -16,7 +16,7 @@
     "Issuer": "b2cmultitenant",
     "Audience": "b2cmultitenant",
     "ValidityHours": 72,
-    "RedirectPath": "/home/membersignin"
+    "RedirectPath": "/members/redeem"
   },
   "AllowedHosts": "*"
 }
