Problems with signin flow secrets. Disabling the site.

--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -18,9 +18,8 @@
   },
   "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "yourtenant.onmicrosoft.com",
-    "ClientId": "08e86a26-1465-4eca-833a-48a08e7f1018",
-    "ClientSecret": "70E95355891398B16E8659BD51D52DC4CBEF9130"
+    "TenantId": "b2cmultitenant.onmicrosoft.com",
+    "ClientId": "08e86a26-1465-4eca-833a-48a08e7f1018"
   },
   "RESTApi": {
     "MetadataAddress": "",
