--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -7,10 +7,10 @@
   "AzureAD": {
     "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
     "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
-    "Domain": "yourtenant.onmicrosoft.com"
+    "Domain": "b2cmultitenant.onmicrosoft.com"
   },
   "Invitation": {
-    "Domain": "yourtenant.onmicrosoft.com",
+    "Domain": "b2cmultitenant.onmicrosoft.com",
     "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
     "InvitationPolicy": "B2C_1A_MTInvitation",
     "Issuer": "b2cmultitenant",
