Added support for domain_hint

--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.json
@@ -18,5 +18,6 @@
     "ValidityHours": 72,
     "RedirectPath": "/members/redeem"
   },
+  "RestUrl": "https://b2crestapis.azurewebsites.net",
   "AllowedHosts": "*"
 }
