--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.Development.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.Development.json
@@ -5,5 +5,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "RestUrl": "https://b2crestapis.azurewebsites.net",
+  "DevRestUrl": "https://localhost:44353"
 }
