Fixed wrong metadata address (susi2 replaced susi)

--- a/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.Development.json
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/appsettings.Development.json
@@ -6,6 +6,6 @@
       "Microsoft": "Information"
     }
   },
-  "RestUrl": "https://b2crestapis.azurewebsites.net",
-  "DevRestUrl": "https://localhost:44353"
+  "OldRestUrl": "https://b2crestapis.azurewebsites.net",
+  "RestUrl": "https://localhost:44353"
 }
