--- a/REST/RESTFunctions/appsettings.json
+++ b/REST/RESTFunctions/appsettings.json
@@ -14,7 +14,7 @@
     "Instance": "https://b2cmultitenant.b2clogin.com",
     "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
     "ClientId": "62e7e7ea-a2cb-42e2-b356-f53424c67c4e",
-    "Policy": "b2c_1a_mtsusi"
+    "Policy": "b2c_1a_mtsusi2"
   },
   "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
