--- a/Policies/MultiTenant/settings.json
+++ b/Policies/MultiTenant/settings.json
@@ -6,5 +6,6 @@
     "RestGetOrJoinTenant": "https://b2crestapis.azurewebsites.net/tenant/member",
     "RestGetTenantForUser": "https://b2crestapis.azurewebsites.net/tenant/currmember",
     "GoogleClientId": "696994352313-1v1ntp02mhbe2eh558v9v6bmd3p269up.apps.googleusercontent.com",
-    "AADSecret": "B2C_1A_MeraridomSecret"
+    "AADSecret": "B2C_1A_MeraridomSecret",
+    "AAD-Client-App": "e2af792e-4f63-4ef0-91fc-54be58f8f5d1"
 }
