--- a/Policies/MultiTenant/settings.json
+++ b/Policies/MultiTenant/settings.json
@@ -2,6 +2,7 @@
     "ExtAppId": "2f03ad85-b864-4a88-9de2-670ae094553f",
     "ExtObjectId": "41191a56-5ab0-4966-a8c8-fa569c485a39",
     "SUSI_UI":"https://b2cdatastore.blob.core.windows.net/uix/IdPSelect.html",
+    "SignInOnly_UI":"https://b2cdatastore.blob.core.windows.net/uix/SignInOnly.html",    
     "RestTenantCreate": "https://b2crestapis.azurewebsites.net/tenant",
     "RestGetOrJoinTenant": "https://b2crestapis.azurewebsites.net/tenant/member",
     "RestGetTenantForUser": "https://b2crestapis.azurewebsites.net/tenant/currmember",
