Adding initial setup instructions and script

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@
 *.user
 *.userosscache
 *.sln.docstates
-*cer
+*.cer
+*.pfx
+*.bak
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
