--- a/Scripts/MultiTenant/appsettings-dep.json
+++ b/Scripts/MultiTenant/appsettings-dep.json
@@ -1,22 +1,20 @@
 {
-    "b2cTenant": "mrochonb2cprod.onmicrosoft.com",
-    "script": {
-        "clientId": "cbc09241-eb05-4178-afe1-03dc67ffa1b7",
-        "redirectUri": "urn:ietf:wg:oauth:2.0:oob",
-        "scopes": [ "Directory.AccessAsUser.All" ]
-    },
+    "b2cTenant": "b2c tenant (e.g. myb2c)",
     "resourceGroup": "b2cmultitenant",
     "location": "westus",
     "appServicePlan": "B1",
     "webApp": {
         "name": "b2cmtapp",
+        "appId": "copy from B2C app registration, e.g.: f809d7a4-629c-4e92-a929-36ba0203e058",
+        "secret": "copy from B2C app secrets",
         "gitRepo": "https://github.com/mrochon/b2c-mt-webapp/",
-        "gitToken": "d02b877c8e81ee818fa58cd14d4a671b66439a9e"        
+        "gitToken": "4ed3b6568f140c66399b835b79ff4251170ab3ef"        
     },
     "webAPI": {
         "name": "b2cmtapi",
+        "appId": "76fe6804-7c5b-4523-af50-751c541ec80d",
         "gitRepo": "https://github.com/mrochon/b2c-mt-rest/",
-        "gitToken": "d02b877c8e81ee818fa58cd14d4a671b66439a9e"  
+        "gitToken": "4ed3b6568f140c66399b835b79ff4251170ab3ef"  
     },
     "InvitationKey": "<gen in B2C and copy here>",
     "X509KeyPassword": "password"
