Fixes to setup script. incomplete

--- a/Scripts/MultiTenant/appsettings.json
+++ b/Scripts/MultiTenant/appsettings.json
@@ -19,5 +19,6 @@
         "gitToken": "d02b877c8e81ee818fa58cd14d4a671b66439a9e"  
     },
     "InvitationKey": "<gen in B2C and copy here>",
-    "X509KeyPassword": "password"
+    "X509KeyPassword": "password",
+	"AADCommonAppName": ""AADCommon"
 }
