Added Invitation service API and support for user access tokens

--- a/Scripts/MultiTenant/setupSettings.json
+++ b/Scripts/MultiTenant/setupSettings.json
@@ -1,21 +1,21 @@
 {
     "b2cTenant": "mrochonb2cprod.onmicrosoft.com",
-    "policyPrefix": "MT1",
+    "policyPrefix": "MT",
     "script": {
         "clientId": "cbc09241-eb05-4178-afe1-03dc67ffa1b7",
         "redirectUri": "urn:ietf:wg:oauth:2.0:oob",
         "scopes": ["Directory.AccessAsUser.All", "TrustFrameworkKeySet.ReadWrite.All"]
     },
-    "subscription": "023ffa71-19b2-4f09-891f-432e5d50db5a",
-    "resourceGroup": "b2cmultitenant1",
+    "subscription": "b63a13ff-9687-48e5-83bc-81d818f8f12c",
+    "resourceGroup": "b2cmultitenant",
     "location": "westus",
     "appServicePlan": "B1",
     "webApp": {
-        "name": "b2cmtapp99",
+        "name": "b2cmultitenant",
         "gitRepo": "https://github.com/mrochon/b2c-mt-webapp/"
     },
     "webAPI": {
-        "name": "b2cmtapi99",
+        "name": "b2cmtrest",
         "gitRepo": "https://github.com/mrochon/b2c-mt-rest/"
     },
     "AADCommonAppName": "AADCommon"
