--- a/REST/B2CRestApis/appsettings.json
+++ b/REST/B2CRestApis/appsettings.json
@@ -6,11 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AAD": {
+  "B2C": {
     "Instance": "https://login.microsoftonline.com/",
+    //"Instance": "https://login.microsoftonline.com/tfp/",
+    //"Instance": "https://mrochonb2cprod.onmicrosoft.com",
     "TenantId": "cf6c572c-c72e-4f31-bd0b-75623d040495",
+    "Domain": "mrochonb2cprod.onmicrosoft.com",
     "ClientId": "5e976aba-65ee-4185-8fdc-d317f7c34959",
-    "RedirectUri": "https://b2crestapis"
+    "RedirectUri": "https://b2crestapis",
+    "SignUpSignInPolicyId": "B2C_1_BasicSUSI"
   },
   "O365": {
     "Instance": "https://login.microsoftonline.com/",
@@ -18,8 +22,12 @@
     "ClientId": "3c2d8933-bcc7-40d1-84e8-5f66cb825969",
     "RedirectUri": "https://b2crestapis"
   },
-  "SymetricKey": {
+  "BasicAuth": {
     "userId": "mrochon"
+  },
+  "Invitation": {
+    "Policy": "B2C_1A_Invitation",
+    "ValidityMinutes": 60
   },
   "AllowedHosts": "*"
 }
