--- a/REST/B2CRestApis/appsettings.json
+++ b/REST/B2CRestApis/appsettings.json
@@ -8,7 +8,7 @@
   },
   "B2C": {
     "Instance": "https://login.microsoftonline.com/",
-    //"Instance": "https://login.microsoftonline.com/tfp/",
+    //"Instance": "https://mrochonb2cprod.b2clogin.com",
     //"Instance": "https://mrochonb2cprod.onmicrosoft.com",
     "TenantId": "cf6c572c-c72e-4f31-bd0b-75623d040495",
     "Domain": "mrochonb2cprod.onmicrosoft.com",
@@ -26,7 +26,7 @@
     "userId": "mrochon"
   },
   "Invitation": {
-    "Policy": "B2C_1A_Invitation",
+    "Policy": "B2C_1A_INVITEsignup_invitation",
     "ValidityMinutes": 60
   },
   "AllowedHosts": "*"
