Updated Invitation to allow local only and social only redemptions

--- a/Policies/invitation/source/CreateInvitation/CreateInvitation/appSettings.json
+++ b/Policies/invitation/source/CreateInvitation/CreateInvitation/appSettings.json
@@ -2,7 +2,9 @@
   "Invitation": {
     "TenantName": "<B2C tenant, e.g. myb2c - do not include onmicrosoft.com>",
     "ClientId": "1f4b42d3-ab3d-4a1a-a08d-b2882fade4b2",
-    "Policy": "B2C_1A_INVITATIONREDEMPTION",
+    "Issuer": "iss://inviter",
+    "Audience": "b2c",    
+    "Policy": "B2C_1A_INVITATIONREDEMPTIONLocal",
     "RedeemReplyUrl": "https://jwt.ms",
     "ValidityMinutes": "60"
   }
