--- a/Policies/invitation/source/CreateInvitation/CreateInvitation/appSettings.json
+++ b/Policies/invitation/source/CreateInvitation/CreateInvitation/appSettings.json
@@ -1,11 +1,11 @@
 {
   "Invitation": {
-    "TenantName": "<B2C tenant, e.g. myb2c - do not include onmicrosoft.com>",
-    "ClientId": "1f4b42d3-ab3d-4a1a-a08d-b2882fade4b2",
+    "TenantName": "mrochonb2cprod",
+    "ClientId": "88e4056b-ffce-4660-a3fe-2481e2713197",
     "Issuer": "iss://inviter",
-    "Audience": "b2c",    
-    "Policy": "B2C_1A_INVITATIONREDEMPTIONLocal",
-    "RedeemReplyUrl": "https://jwt.ms",
+    "Audience": "b2c",
+    "Policy": "B2C_1A_INVITEInvitationRedemptionLocal",
+    "RedeemReplyUrl": "https://oidcdebugger.com/debug",
     "ValidityMinutes": "60"
   }
 }
