Display member email in list

--- a/Policies/MultiTenant/source/API/RESTFunctions/appsettings-mt.json
+++ b/Policies/MultiTenant/source/API/RESTFunctions/appsettings-mt.json
@@ -6,7 +6,7 @@
   },
   "AuthCert": {
     "thumbprint": "31F3EDB4063CB09785931BA9C68254C903426A80",
-    "issuer": "CN=MTTRestClient.b2cmultitenant.onmicrosoft.com",
+    "issuer": "CN=MTRestClient.b2cmultitenant.onmicrosoft.com",
     "subject": "CN=MTRestClient.b2cmultitenant.onmicrosoft.com"
   },
   "AllowedHosts": "*",
@@ -22,7 +22,8 @@
     "ClientId": "f6458954-7bd2-4a83-a001-13ae0eeaf1ec"
   },
   "Invitation": {
-    "Policy": "B2C_1A_MTInvitation",
-    "ValidityMinutes": 60
+    "Policy": "B2C_1A_V2Invitation",
+    "ValidityHours": 24,
+    "IncludeDomainHints": true
   }
 }
