Cleaned up invitation redemptions

--- a/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
+++ b/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
@@ -24,6 +24,8 @@
   "Invitation": {
     "Policy": "B2C_1A_V2Invitation",
     "ValidityHours": 24,
-    "IncludeDomainHints": true
+    "IncludeDomainHints": true,
+    "clientId": "c84a01bb-4f19-4eef-9941-4ab537922039",
+    "replyUrl": "http://localhost:3000/redeem"
   }
 }
