AKS config working

--- a/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
+++ b/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
@@ -3,5 +3,29 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "AuthCert": {
+    "thumbprint": "thumbprint, e.g. 31F3EDB4063CB09785931BA9C68254C903426A80",
+    "issuer": "issuer, e.g. CN=MTRestClient.b2cmultitenant.onmicrosoft.com",
+    "subject": "subject, e.g. CN=MTRestClient.b2cmultitenant.onmicrosoft.com"
+  },
+  "AllowedHosts": "*",
+  "B2C": {
+    "TenantName": "B2C tenant name, e.g. b2cmultitenant",
+    "TenantId": "tenant id, e.g.: d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "ClientId": "public app client id, e.g. 8c8fefff-0743-499c-a26f-f5cf9f68b197",
+    "Policy": "b2C Journey through which delegated tokens were obtaine,e .g.: B2C_1A_V2SignIn"
+  },
+  "ClientCreds": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "ClientId": "f6458954-7bd2-4a83-a001-13ae0eeaf1ec"
+  },
+  "Invitation": {
+    "Policy": "B2C_1A_V2Invitation",
+    "ValidityHours": 24,
+    "IncludeDomainHints": true,
+    "clientId": "c84a01bb-4f19-4eef-9941-4ab537922039",
+    "replyUrl": "http://localhost:3000"
   }
 }
