--- a/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
+++ b/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
@@ -10,11 +10,11 @@
     "subject": "CN=MTRestClient.b2cmultitenant.onmicrosoft.com"
   },
   "AllowedHosts": "*",
-  "B2C": {
+  "B2CBearer": {
     "TenantName": "b2cmultitenant",
     "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
     "ClientId": "8c8fefff-0743-499c-a26f-f5cf9f68b197",
-    "Policy": "B2C_1A_V2SignIn"
+    "Policy": "B2C_1A_V4_SignIn"
   },
   "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
@@ -22,7 +22,7 @@
     "ClientId": "f6458954-7bd2-4a83-a001-13ae0eeaf1ec"
   },
   "Invitation": {
-    "Policy": "B2C_1A_V2Invitation",
+    "Policy": "B2C_1A_V4_Invitation",
     "ValidityHours": 24,
     "IncludeDomainHints": true,
     "clientId": "c84a01bb-4f19-4eef-9941-4ab537922039",
