--- a/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
+++ b/Policies/MultiTenant/source/API/RESTFunctions/appsettings.json
@@ -4,28 +4,26 @@
       "Default": "Warning"
     }
   },
-  "AuthCert": {
-    "thumbprint": "31F3EDB4063CB09785931BA9C68254C903426A80",
-    "issuer": "CN=MTRestClient.b2cmultitenant.onmicrosoft.com",
-    "subject": "CN=MTRestClient.b2cmultitenant.onmicrosoft.com"
-  },
   "AllowedHosts": "*",
+  "AuthCert": {
+    "thumbprint": "C033497554E1E752F72FE2794147B3B56A205F8E"
+  },
+  "APIClientCreds": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "ClientId": "cec4ce70-6e43-4057-b27b-5ec1f6201285"
+  },
   "B2CBearer": {
     "TenantName": "b2cmultitenant",
     "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
-    "ClientId": "8c8fefff-0743-499c-a26f-f5cf9f68b197",
-    "Policy": "B2C_1A_V4_SignIn"
-  },
-  "ClientCreds": {
-    "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
-    "ClientId": "f6458954-7bd2-4a83-a001-13ae0eeaf1ec"
+    "ClientId": "3e1270b9-ab92-4f9d-ab9a-267a19f24a52",
+    "Policy": "B2C_1A_V3_SignIn"
   },
   "Invitation": {
-    "Policy": "B2C_1A_V4_Invitation",
+    "Policy": "B2C_1A_V3_Invitation",
     "ValidityHours": 24,
     "IncludeDomainHints": true,
-    "clientId": "c84a01bb-4f19-4eef-9941-4ab537922039",
-    "replyUrl": "http://localhost:3000/redeem"
+    "ClientId": "93242ad4-9084-4493-a4cf-10c7b0266e1d",
+    "ReplyUrl": "http://localhost:3000/redeem"
   }
 }
