--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,5 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 /Policies/GuestUsers/gen/mrochonb2cprod.onmicrosoft.com
+
+.codegpt
